Fix contextual panels breaking inside accordion
Styles for default panel were leaking into panels in other states (such as
success or warning). This fix constrains the default style and adds additional
selectors for the other states.

Since there is a visual overlap of borders in the according, a hierarchy
(danger > warning > success > primary) is enforced. For example the top and
bottom borders for a .panel-danger will take precedence over all other panel
types.

The test is added under panels.

--- a/src/less/panels.less
+++ b/src/less/panels.less
@@ -20,11 +20,66 @@
   .panel-default {
     border-color: @panel-default-border-color;
     border-top-color: @panel-default-border-color;
+    .panel-heading {
+      #gradient > .vertical(@btn-default-bg-img-start, @btn-default-bg-img-stop);
+      + .panel-collapse .panel-body {
+        border-top: 1px solid @panel-inner-border;
+      }
+    }
   }
-  .panel-heading {
-    #gradient > .vertical(@btn-default-bg-img-start, @btn-default-bg-img-stop);
-    + .panel-collapse .panel-body {
-      border-top: 1px solid @panel-inner-border;
+
+  .panel-primary {
+    border-color: @panel-primary-border;
+    .panel-heading {
+      background-color: @panel-primary-bg;
+    }
+    + .panel-default {
+      border-top-color: @panel-primary-border;
+    }
+  }
+  .panel-success {
+    border-color: @panel-success-border;
+    .panel-heading {
+      background-color: @panel-success-bg;
+    }
+    + .panel-default {
+      border-top-color: @panel-success-border;
+    }
+    + .panel-primary {
+      border-top-color: @panel-success-border;
+    }
+  }
+  .panel-warning {
+    border-color: @panel-warning-border;
+    .panel-heading {
+      background-color: @panel-warning-bg;
+    }
+    + .panel-default {
+      border-top-color: @panel-warning-border
+    }
+    + .panel-primary {
+      border-top-color: @panel-warning-border;
+    }
+    + .panel-success {
+      border-top-color: @panel-warning-border;
+    }
+  }
+  .panel-danger {
+    border-color: @panel-danger-border;
+    .panel-heading {
+      background-color: @panel-danger-bg;
+    }
+    + .panel-default {
+      border-top-color: @panel-danger-border;
+    }
+    + .panel-primary {
+      border-top-color: @panel-danger-border;
+    }
+    + .panel-success {
+      border-top-color: @panel-danger-border;
+    }
+    + .panel-warning {
+      border-top-color: @panel-danger-border;
     }
   }
   .panel-title {
