--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -394,17 +394,30 @@
 @nav-pf-vertical-badges-width:                                      (@nav-pf-vertical-width + 50px);
 @padding-small-horizontal:                                          @padding-base-horizontal;
 @padding-small-vertical:                                            @padding-base-vertical;
-@panel-danger-border:                                               @brand-danger;
+@panel-danger-bg:                                                   @state-danger-bg;
+@panel-danger-border:                                               @state-danger-border;
 @panel-danger-heading-bg:                                           @brand-danger;
 @panel-info-border:                                                 @brand-info;
 @panel-info-heading-bg:                                             @brand-info;
+@panel-primary-bg:                                                  @state-primary-bg;
+@panel-primary-border:                                              @state-primary-border;
 @panel-primary-text:                                                @body-bg;
-@panel-success-border:                                              @brand-success;
+@panel-success-bg:                                                  @state-success-bg;
+@panel-success-border:                                              @state-success-border;
 @panel-success-heading-bg:                                          @brand-success;
-@panel-warning-border:                                              @brand-warning;
+@panel-warning-bg:                                                  @state-warning-bg;
+@panel-warning-border:                                              @state-warning-border;
 @panel-warning-heading-bg:                                          @brand-warning;
-@state-warning-text:                                                @brand-warning;
+@state-danger-bg:                                                   lighten(@color-pf-red-100, 55%);
+@state-danger-border:                                               @brand-danger;
 @state-danger-text:                                                 @brand-danger;
+@state-primary-bg:                                                  lighten(@color-pf-blue-100, 8%);
+@state-primary-border:                                              @color-pf-blue-300;
+@state-success-bg:                                                  lighten(@color-pf-green-100, 8%); 
+@state-success-border:                                              @brand-success;
+@state-warning-bg:                                                  lighten(@color-pf-orange-100, 8%);
+@state-warning-border:                                              @brand-warning;
+@state-warning-text:                                                @brand-warning;
 // Reference variable declared in block above
 @panel-danger-text:                                                 @panel-primary-text;
 @panel-info-text:                                                   @panel-primary-text;
